--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: require
 services:
   - docker
-before_install:
-  - docker-compose build
-  - docker images
 script:
-  - node -v
+  - docker build ./client -t awnali/multi-container-complex-client
+  - docker build ./server -t awnali/multi-container-complex-server
+  - docker build ./worker -t awnali/multi-container-complex-worker
+  - docker build ./ngnix -t awnali/multi-container-complex-ngnix
